requirements.txt updated

--- a/Application/backend/requirements.txt
+++ b/Application/backend/requirements.txt
@@ -1,17 +1,27 @@
 cachetools==5.5.2
 certifi==2025.7.9
 charset-normalizer==3.4.2
+edge_tts==7.0.2
+fastapi==0.116.1
 google-api-core==2.25.1
 google-auth==2.40.3
 google-cloud-texttospeech==2.27.0
 googleapis-common-protos==1.70.0
 grpcio==1.73.1
 grpcio-status==1.73.1
+httpx==0.28.1
 idna==3.10
+openai_whisper==20250625
+passlib==1.7.4
 proto-plus==1.26.1
 protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pydantic==2.11.7
+python-dotenv==1.1.1
+python_jose==3.3.0
 requests==2.32.4
 rsa==4.9.1
+SQLAlchemy==2.0.21
 urllib3==2.5.0
+whisperx==3.4.2
